microservices-kubernetes/K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: commandservice:dev # for release apiscevs/commandservice:dev
          imagePullPolicy: IfNotPresent # Get to the repo only if it is missing locally
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 8080 # the port that docker container is exposing
#kubectl apply -f commands-depl.yaml 
#kubectl get deployments
#kubectl get pods

#kubectl delete deployment commands-depl
