microservices-kubernetes/K8S/jaeger-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 4317 # OTLP gRPC receiver
            - containerPort: 4318 # OTLP HTTP receiver
            - containerPort: 16686 # Jaeger UI
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-clusterip
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
    - port: 4317
      targetPort: 4317
      protocol: TCP
      name: grpc
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: http
  selector:
    app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-loadbalancer
  labels:
    app: jaeger
spec:
  type: LoadBalancer
  ports:
    - port: 16687
      targetPort: 16686
      protocol: TCP
      name: ui
  selector:
    app: jaeger
