microservices-kubernetes/K8S/platforms-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-nodeport-service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
#kubectl apply -f platforms-nodeport-service.yaml

#https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.4.0/deploy/static/provider/cloud/deploy.yaml
