microservices-kubernetes/K8S/postgres-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:  
            - containerPort: 5432
          volumeMounts: 
            - mountPath: "/var/lib/postgres/data/pgdata"
              name: postgres-data
      volumes: 
        - name: postgres-data
          persistentVolumeClaim:  
            claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: postgres
  ports:
  - name: postgres
    protocol: TCP
    port: 5433
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: postgres
  ports:  
  - protocol: TCP
    port: 5433
    targetPort: 5432





#kubectl create secret generic postgres --from-literal=POSTGRES_PASSWORD="password"
#kubectl apply -f postgres-plat-depl.yaml
