microservices-kubernetes/K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12.12-management
          ports:
            - containerPort: 15672 # web
              name: rbmq-mgmt-port
            - containerPort: 5672 # client
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: rabbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672 # the port that docker container is exposing
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672 # the port that docker container is exposing
---
# to be able to access from host machine
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672 # the port that docker container is exposing
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672 # the port that docker container is exposing
#kubectl apply -f commands-depl.yaml 
#kubectl get deployments
#kubectl get pods

#kubectl delete deployment commands-depl
